# kamera

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  AUTHORS  CMakeLists.txt  ConfigureChecks.cmake  FindGphoto2.cmake  Makefile.am  README  config-kamera.h.cmake  configure.in.in  org.kde.kamera.appdata.xml  org.kde.kamera.metainfo.xml  snapcraft.yaml  solid_camera.desktop
doc/: CMakeLists.txt  index.docbook
kcontrol/: CMakeLists.txt  Makefile.am  Messages.sh  kamera.cpp  kamera.desktop  kamera.h  kamera.json  kameraconfigdialog.cpp  kameraconfigdialog.h  kameradevice.cpp  kameradevice.h  kcm_kamera.json
kioslave/: CMakeLists.txt  Makefile.am  Messages.sh  camera.json  camera.json.cmake  camera.protocol  kamera.cpp  kamera.h  kamera.protocol
kioworker/: CMakeLists.txt  Messages.sh  camera.json  kamera.cpp  kamera.h  kameralist.cpp  kameralist.h
pics/: CMakeLists.txt  Makefile.am
po/af/: kcmkamera.po
po/ar/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/ar/docs/kcontrol/kamera/: index.docbook
po/ast/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/az/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/be/: kcmkamera.po
po/bg/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/br/: kcmkamera.po
po/bs/: kcmkamera.po
po/ca/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/ca/docs/kcontrol/kamera/: index.docbook
po/ca@valencia/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/cs/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/cs/docs/kcontrol/kamera/: index.docbook
po/cy/: kcmkamera.po
po/da/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/de/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/de/docs/kcontrol/kamera/: index.docbook
po/el/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/en_GB/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/eo/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/es/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/es/docs/kcontrol/kamera/: index.docbook
po/et/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/et/docs/kcontrol/kamera/: index.docbook
po/eu/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/fa/: kcmkamera.po
po/fi/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/fr/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/fr/docs/kcontrol/kamera/: index.docbook
po/fy/: kcmkamera.po
po/ga/: kcmkamera.po  kio6_kamera.po
po/gl/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/gl/docs/kcontrol/kamera/: index.docbook
po/he/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/hi/: kcmkamera.po  kio6_kamera.po
po/hne/: kcmkamera.po
po/hr/: kcmkamera.po
po/hu/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/ia/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/id/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/is/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/it/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/it/docs/kcontrol/kamera/: index.docbook
po/ja/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/ka/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/kk/: kcmkamera.po
po/km/: kcmkamera.po
po/ko/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/lt/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/lv/: kcmkamera.po  kio6_kamera.po
po/mk/: kcmkamera.po
po/ml/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/mr/: kcmkamera.po
po/ms/: kcmkamera.po
po/nb/: kcmkamera.po
po/nds/: kcmkamera.po
po/ne/: kcmkamera.po
po/nl/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/nl/docs/kcontrol/kamera/: index.docbook
po/nn/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/oc/: kcmkamera.po
po/pa/: kcmkamera.po  kio6_kamera.po
po/pl/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/pl/docs/kcontrol/kamera/: index.docbook
po/pt/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/pt/docs/kcontrol/kamera/: index.docbook
po/pt_BR/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/pt_BR/docs/kcontrol/kamera/: index.docbook
po/ro/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/ru/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/ru/docs/kcontrol/kamera/: index.docbook
po/sa/: kcmkamera.po  kio6_kamera.po
po/se/: kcmkamera.po
po/si/: kcmkamera.po
po/sk/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/sl/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/sl/docs/kcontrol/kamera/: index.docbook
po/sq/: kcmkamera.po
po/sv/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/sv/docs/kcontrol/kamera/: index.docbook
po/ta/: kcmkamera.po  kio6_kamera.po
po/tg/: kcmkamera.po
po/th/: kcmkamera.po
po/tr/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/tr/docs/kcontrol/kamera/: index.docbook
po/ug/: kcmkamera.po  kio6_kamera.po
po/uk/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/uk/docs/kcontrol/kamera/: index.docbook
po/vi/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/xh/: kcmkamera.po
po/zh_CN/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
po/zh_HK/: kcmkamera.po
po/zh_TW/: kcmkamera.po  kio5_kamera.po  kio6_kamera.po
